# FinMem-LLM-StockTrading

./: .gitignore  VIETNAMESE_STOCKS.md  pyproject.toml  requirements.txt  run.py  run_fpt_gpt.bat
config/: fpt_gpt_config.toml  fpt_ollama_config.toml
data-pipeline/: 00_model_wrapper.py  02_news_download.py  03_news_summary.py  04-data-pipeline-vnstock.py  04_financial_filings_download.py  05_data_pipeline.py  05_get_sentiment.py  06_get_sentiment.py  README.md  data_pipeline.py  financial_statements_download.py  get_sentiment_by_ticker.py  model_wrapper.py  news_download.py  news_summary.py  price_data_download.py  sources_config.json  stockdata_download.py
puppy/: reflection.py
